--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,15 @@
     <string name="dummy_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="get_started">Get Started</string>
     <string name="get_done">Mari Kita Selesaikan</string>
+    <string name="about_app">Wheelify adalah aplikasi untuk memindai kendaraan di jalan tol.</string>
+    <string name="team_heading">Tim Pengembang:</string>
+    <string name="team_members">
+        Tsabitah Elysia Krismananda\n
+        Dwi Rahayu Wulanida\n
+        Masitha Mirzaky Firdaus\n
+        Iluh Meiranda Dyah Setyawati\n
+        M. Saaduddin Abdillah Yusuf\n
+        Jonathan Kaparang\n
+        Afan Kristianto
+    </string>
 </resources>
