Memperbaiki Pengambilan API News agar bisa di fetch, dan memperbaikin tampilan dari fragment_home.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
         Jonathan Kaparang\n
         Afan Kristianto
     </string>
+    <string name="recommendation">Here\'s Recommendation For You !</string>
+    <string name="popular">Popular Recommendation</string>
 </resources>
