Memperbaiki Logika untuk Detail Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     </string>
     <string name="recommendation">Here\'s Recommendation For You !</string>
     <string name="popular">Popular Recommendation</string>
+    <string name="source_news">Source News</string>
 </resources>
