--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="about">Tentang</string>
     <string name="date_app">Aplikasi dibuat</string>
     <string name="date">12/12/2024</string>
+    <string name="result">Hasil Analisis</string>
 </resources>
